# iris

./: .gitignore  CHANGELOG.md  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  startup.py
backend/app/audit/: models.py  router.py  service.py
backend/app/auth/: dependencies.py  models.py  router.py  service.py
backend/app/batch/: models.py  router.py  service.py
backend/app/bookmarks/: __init__.py  models.py  router.py
backend/app/comments/: __init__.py  models.py  router.py
backend/app/diagrams/: models.py  notation_detection.py  registry_models.py  registry_router.py  registry_service.py  router.py  service.py  thumbnail.py
backend/app/elements/: models.py  router.py  service.py
backend/app/entities/: __init__.py  models.py  router.py  service.py
backend/app/import_sparx/: converter.py  eap_converter.py  icon_matcher.py  mapper.py  reader.py  router.py  service.py
backend/app/locks/: models.py  router.py  service.py
backend/app/middleware/: audit.py  rate_limit.py
backend/app/migrations/: m001_roles_users.py  m002_entities_relationships_models.py  m003_audit_log.py  m004_comments_bookmarks.py  m005_search.py  m006_settings.py  m007_thumbnails.py  m008_entity_tags.py  m009_model_tags.py  m010_thumbnail_themes.py  m011_model_hierarchy.py  m012_sets.py  (+14 more)
backend/tests/: conftest.py  test_app.py  test_converter_visual.py  test_database.py  test_ea_theme_rendering_config.py  test_model_relationships.py  test_package_relationships.py  test_project_setup.py  test_rate_limit.py  test_startup.py  test_themes.py
(+595 files in other folders)
